metadata/objects/GRAX_Schedule_Process__c.object
<CustomObject>
    <description>This object is the record which will be executed to back up/archive records from Salesforce. This record contains the objects, schedule frequency, start time, etc. of the back up/archive process.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archive_Override_Approved_By__c</fullName>
        <label>Archive Override Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Archive</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Delete_GRAX_Records__c</fullName>
        <formula>NOT(Is_Running__c)</formula>
        <label>Can Delete GRAX Records?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Field__c</fullName>
        <description>Date_Field</description>
        <inlineHelpText>Salesforce field on the selected object from which the Start &amp; End Dates are being used</inlineHelpText>
        <label>Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Unique_Key__c</fullName>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Type__c</fullName>
        <label>Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_Value__c</fullName>
        <label>Frequency Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_Summary_Link__c</fullName>
        <formula>HYPERLINK( $Setup.GRAXSettings__c.GRAX_Flow_URL__c + &quot;/grax-app/grax-data-lake/generateBackupSummary/&quot; + CASESAFEID(Id) + &quot;/&quot; + SUBSTITUTE( Execution_Unique_Key__c, &apos;/&apos;, &apos;%2F&apos;) + &quot;?orgid=&quot; + CASESAFEID( $Organization.Id) , &quot;Summary Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRAX Summary Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Running__c</fullName>
        <description>Field used to determine if the current Scheduled Process is in a &quot;running&quot; state</description>
        <formula>ISPICKVAL (Status__c, &quot;Running&quot;)  ||
ISPICKVAL (Status__c, &quot;Sending data to GRAX&quot;)  ||
ISPICKVAL (Status__c, &quot;Deleting Salesforce records&quot;)  ||
ISPICKVAL (Status__c, &quot;Pending send data to GRAX&quot;)  ||
ISPICKVAL (Status__c, &quot;Starting Archive Process&quot;)</formula>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <description>Last_Run_Date</description>
        <inlineHelpText>Last time this Scheduled Process was run</inlineHelpText>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Start_Time__c</fullName>
        <label>Last Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Run_Date__c</fullName>
        <description>Next_Run_Date</description>
        <inlineHelpText>Next date/time this Scheduled Process will execute</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object_Name</description>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progressive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progressive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rolling_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rolling Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <description>Schedule_Type</description>
        <inlineHelpText>Frequency of when the Scheduled Process will run</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Criteria__c</fullName>
        <description>Select_Criteria</description>
        <label>Select Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main Object not modified</fullName>
                </value>
                <value>
                    <fullName>Main Object and Children not modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Object_Hierarchy_JSON__c</fullName>
        <description>Selected_Object_Hierarchy_JSON</description>
        <label>Selected Object Hierarchy JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed - Errors sending data</fullName>
                </value>
                <value>
                    <fullName>Sending data to GRAX</fullName>
                </value>
                <value>
                    <fullName>Deleting Salesforce records</fullName>
                </value>
                <value>
                    <fullName>Pending send data to GRAX</fullName>
                </value>
                <value>
                    <fullName>Completed - Errors deleting records</fullName>
                </value>
                <value>
                    <fullName>Starting Archive Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Target_Date</description>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <description>Target_End_Date</description>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_End_Datetime__c</fullName>
        <inlineHelpText>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will end.</inlineHelpText>
        <label>Target End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Report__c</fullName>
        <inlineHelpText>ID of the Salesforce report used for this process</inlineHelpText>
        <label>Target Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Start_Datetime__c</fullName>
        <inlineHelpText>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will begin.</inlineHelpText>
        <label>Target Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tatal_Objects_Processed__c</fullName>
        <label>Tatal Objects Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Objects_Processed__c</fullName>
        <label>Total Objects Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Objects_To_Process__c</fullName>
        <label>Total Objects To Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_To_Send__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records To Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentElementIndex__c</fullName>
        <label>currentElementIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hierarchy</fullName>
                    <default>true</default>
                    <label>Hierarchy</label>
                </value>
                <value>
                    <fullName>Multi-Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GRAX Schedule Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Next_Run_Date__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Schedule Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Schedule Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>